<resources>
    <string name="app_name">COVID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_supplies">Supplies</string>
    <string name="menu_news">News</string>
    <string name="menu_map">Map (Chinese Only)</string>

    <string name="home_second">Home Second</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="discharged">Discharged</string>
    <string name="up">▲</string>
    <string name="home_source">Source: data.gov.hk</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="updateDate">Updated on </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="opening_hours">Opening Hours (Optional)</string>
    <string name="from_hhhh">From (hhmm)</string>
    <string name="to_hhhh">To (hhmm)</string>
    <string name="add">Add</string>
    <string name="add_a_photo_for_the_store_optional">Add a photo for the store (Optional)</string>
    <string name="verification_email_sent">Verification Email Sent</string>
    <string name="email1">Please check your mailbox for the verification email. After you have verified your email, you can access our application. Thank You</string>
    <string name="google_my_map_created_by_appledaily">&#160;&#160;Google My Maps Created by Appledaily&#160;&#160;</string>
    <string name="supplies_availbility">Supplies Availbility</string>
    <string name="surgical_mask">Surgical Mask</string>
    <string name="note_add_store">Note: Once the new store is approved by our team, it will be displayed on the app</string>
    <string name="text_login_hk1">康 復 香 港</string>
    <string name="text_login_hk2">時 代 抗 疫</string>
    <string name="save_lifes_save_hong_kong">SAVE LIVES  SAVE HONG KONG</string>
    <string name="hand_sanitizer">Hand Sanitizer</string>
    <string name="bleach">Bleach</string>
    <string name="rubbing_alcohol">Rubbing Alcohol</string>
    <string name="respirator">Respirator</string>
    <string name="isolation_clothing">Isolation Clothing</string>
    <string name="product_name_optional">Product Name*</string>
    <string name="price_optional">Price*</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="optional">* Optional</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
