<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_36"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_supplies"
            android:icon="@drawable/baseline_store_black_36"
            android:title="@string/menu_supplies" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_radio_black_36"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_black_36"
            android:title="@string/menu_map" />
    </group>
</menu>
